# serializer version: 1
# name: test_command_from_external_plugin
  '''
  +------------------------+
  | key      | value       |
  |----------+-------------|
  | GREETING | Hello John! |
  +------------------------+
  '''
# ---
# name: test_disabling_and_enabling_command
  '''
  
   Usage: snow [OPTIONS] COMMAND [ARGS]...
  
   Snowflake CLI tool for developers [v0.0.1-test_patched]
  
  +- Options --------------------------------------------------------------------+
  | --help                -h            Show this message and exit.              |
  | --version                           Shows version of the Snowflake CLI       |
  | --info                              Shows information about the Snowflake    |
  |                                     CLI                                      |
  | --config-file                 FILE  Specifies Snowflake CLI configuration    |
  |                                     file that should be used                 |
  | --install-completion                Install completion for the current       |
  |                                     shell.                                   |
  | --show-completion                   Show completion for the current shell,   |
  |                                     to copy it or customize the              |
  |                                     installation.                            |
  +------------------------------------------------------------------------------+
  +- Commands -------------------------------------------------------------------+
  | app                  Manages Snowflake Native Apps and Snowflake App         |
  |                      Runtime.                                                |
  | auth                 Manages authentication methods.                         |
  | bundle               Manages Snowflake Code Bundles.                         |
  | connection           Manages connections to Snowflake.                       |
  | cortex               Provides access to Snowflake Cortex.                    |
  | custom-image         Manages custom images for Snowpark Container Services.  |
  | dbt                  Manages dbt on Snowflake projects.                      |
  | dcm                  Manages DCM Projects in Snowflake.                      |
  | git                  Manages git repositories in Snowflake.                  |
  | helpers              Helper commands.                                        |
  | init                 Creates project directory from template.                |
  | logs                 Retrieves logs for a given object.                      |
  | notebook             Manages notebooks in Snowflake.                         |
  | object               Manages Snowflake objects like warehouses and stages    |
  | snowpark             Manages procedures and functions.                       |
  | spcs                 Manages Snowpark Container Services compute pools,      |
  |                      services, image registries, and image repositories.     |
  | sql                  Executes SQL statements against Snowflake interactively |
  |                      or from a query, file, or standard input.               |
  | stage                Manages stages.                                         |
  | streamlit            Manages a Streamlit app in Snowflake.                   |
  | multilingual-hello   Says hello in various languages                         |
  +------------------------------------------------------------------------------+
  
  +- Connection configuration ---------------------------------------------------+
  | --connection,--environment    -c      TEXT     Name of the connection, as    |
  |                                                defined in your config.toml   |
  |                                                file. Default: default.       |
  | --host                                TEXT     Host address for the          |
  |                                                connection. Overrides the     |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --port                                INTEGER  Port for the connection.      |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --protocol                            TEXT     Protocol to use for the       |
  |                                                connection, for example       |
  |                                                https. Overrides the value    |
  |                                                specified for the connection. |
  | --account,--accountname               TEXT     Name assigned to your         |
  |                                                Snowflake account. Overrides  |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --user,--username                     TEXT     Username to connect to        |
  |                                                Snowflake. Overrides the      |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --password                            TEXT     Snowflake password. Overrides |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --authenticator                       TEXT     Snowflake authenticator.      |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --workload-identity-provider          TEXT     Workload identity provider    |
  |                                                (AWS, AZURE, GCP, OIDC).      |
  |                                                Overrides the value specified |
  |                                                for the connection            |
  | --private-key-file,--privat…          TEXT     Snowflake private key file    |
  |                                                path. Overrides the value     |
  |                                                specified for the connection. |
  | --token                               TEXT     OAuth token to use when       |
  |                                                connecting to Snowflake.      |
  | --token-file-path                     TEXT     Path to file with an OAuth    |
  |                                                token to use when connecting  |
  |                                                to Snowflake.                 |
  | --database,--dbname                   TEXT     Database to use. Overrides    |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --schema,--schemaname                 TEXT     Database schema to use.       |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --role,--rolename                     TEXT     Role to use. Overrides the    |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --warehouse                           TEXT     Warehouse to use. Overrides   |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --temporary-connection        -x               Uses a connection defined     |
  |                                                with command-line parameters, |
  |                                                instead of one defined in     |
  |                                                config                        |
  | --mfa-passcode                        TEXT     Token to use for multi-factor |
  |                                                authentication (MFA)          |
  | --enable-diag                                  Whether to generate a         |
  |                                                connection diagnostic report. |
  | --diag-log-path                       TEXT     Path for the generated        |
  |                                                report. Defaults to system    |
  |                                                temporary directory.          |
  | --diag-allowlist-path                 TEXT     Path to a JSON file that      |
  |                                                contains allowlist            |
  |                                                parameters.                   |
  | --oauth-client-id                     TEXT     Value of client id provided   |
  |                                                by the Identity Provider for  |
  |                                                Snowflake integration.        |
  | --oauth-client-secret                 TEXT     Value of the client secret    |
  |                                                provided by the Identity      |
  |                                                Provider for Snowflake        |
  |                                                integration.                  |
  | --oauth-authorization-url             TEXT     Identity Provider endpoint    |
  |                                                supplying the authorization   |
  |                                                code to the driver.           |
  | --oauth-token-request-url             TEXT     Identity Provider endpoint    |
  |                                                supplying the access tokens   |
  |                                                to the driver.                |
  | --oauth-redirect-uri                  TEXT     URI to use for authorization  |
  |                                                code redirection.             |
  | --oauth-scope                         TEXT     Scope requested in the        |
  |                                                Identity Provider             |
  |                                                authorization request.        |
  | --oauth-disable-pkce                           Disables Proof Key for Code   |
  |                                                Exchange (PKCE). Default:     |
  |                                                False.                        |
  | --oauth-enable-refresh-toke…                   Enables a silent              |
  |                                                re-authentication when the    |
  |                                                actual access token becomes   |
  |                                                outdated. Default: False.     |
  | --oauth-enable-single-use-r…                   Whether to opt-in to          |
  |                                                single-use refresh token      |
  |                                                semantics. Default: False.    |
  | --client-store-temporary-cr…                   Store the temporary           |
  |                                                credential.                   |
  | --secondary-roles                     TEXT     Secondary roles mode applied  |
  |                                                when the session starts.      |
  |                                                Supported values are ALL and  |
  |                                                NONE; pass NONE to run the    |
  |                                                session only with the primary |
  |                                                role.                         |
  | --server-session-keep-alive                    Keep the session active       |
  |                                                indefinitely, even if there   |
  |                                                is no activity from the user. |
  +------------------------------------------------------------------------------+
  +- Global configuration -------------------------------------------------------+
  | --format                       [TABLE|JSON|JSON_EXT|  Specifies the output   |
  |                                CSV]                   format. [env var:      |
  |                                                       SNOWFLAKE_CLI_OUTPUT_… |
  |                                                       | config:              |
  |                                                       cli.output_format]     |
  |                                                       [default: TABLE]       |
  | --verbose              -v                             Displays log entries   |
  |                                                       for log levels info    |
  |                                                       and higher.            |
  | --debug                                               Displays log entries   |
  |                                                       for log levels debug   |
  |                                                       and higher; debug logs |
  |                                                       contain additional     |
  |                                                       information.           |
  | --silent                                              Turns off intermediate |
  |                                                       output to console.     |
  | --enhanced-exit-codes                                 Differentiate exit     |
  |                                                       error codes based on   |
  |                                                       failure type.          |
  |                                                       [env var:              |
  |                                                       SNOWFLAKE_ENHANCED_EX… |
  | --decimal-precision            INTEGER                Number of decimal      |
  |                                                       places to display for  |
  |                                                       decimal values. Uses   |
  |                                                       Python's default       |
  |                                                       precision if not       |
  |                                                       specified. [env var:   |
  |                                                       SNOWFLAKE_DECIMAL_PRE… |
  +------------------------------------------------------------------------------+
  '''
# ---
# name: test_disabling_and_enabling_command.1
  '''
  +------------------------------+
  | plugin name        | enabled |
  |--------------------+---------|
  | multilingual-hello | True    |
  +------------------------------+
  '''
# ---
# name: test_disabling_and_enabling_command.2
  'Plugin multilingual-hello successfully disabled.'
# ---
# name: test_disabling_and_enabling_command.3
  '''
  +------------------------------+
  | plugin name        | enabled |
  |--------------------+---------|
  | multilingual-hello | False   |
  +------------------------------+
  '''
# ---
# name: test_disabling_and_enabling_command.4
  '''
  
   Usage: snow [OPTIONS] COMMAND [ARGS]...
  
   Snowflake CLI tool for developers [v0.0.1-test_patched]
  
  +- Options --------------------------------------------------------------------+
  | --help                -h            Show this message and exit.              |
  | --version                           Shows version of the Snowflake CLI       |
  | --info                              Shows information about the Snowflake    |
  |                                     CLI                                      |
  | --config-file                 FILE  Specifies Snowflake CLI configuration    |
  |                                     file that should be used                 |
  | --install-completion                Install completion for the current       |
  |                                     shell.                                   |
  | --show-completion                   Show completion for the current shell,   |
  |                                     to copy it or customize the              |
  |                                     installation.                            |
  +------------------------------------------------------------------------------+
  +- Commands -------------------------------------------------------------------+
  | app            Manages Snowflake Native Apps and Snowflake App Runtime.      |
  | auth           Manages authentication methods.                               |
  | bundle         Manages Snowflake Code Bundles.                               |
  | connection     Manages connections to Snowflake.                             |
  | cortex         Provides access to Snowflake Cortex.                          |
  | custom-image   Manages custom images for Snowpark Container Services.        |
  | dbt            Manages dbt on Snowflake projects.                            |
  | dcm            Manages DCM Projects in Snowflake.                            |
  | git            Manages git repositories in Snowflake.                        |
  | helpers        Helper commands.                                              |
  | init           Creates project directory from template.                      |
  | logs           Retrieves logs for a given object.                            |
  | notebook       Manages notebooks in Snowflake.                               |
  | object         Manages Snowflake objects like warehouses and stages          |
  | snowpark       Manages procedures and functions.                             |
  | spcs           Manages Snowpark Container Services compute pools, services,  |
  |                image registries, and image repositories.                     |
  | sql            Executes SQL statements against Snowflake interactively or    |
  |                from a query, file, or standard input.                        |
  | stage          Manages stages.                                               |
  | streamlit      Manages a Streamlit app in Snowflake.                         |
  +------------------------------------------------------------------------------+
  
  +- Connection configuration ---------------------------------------------------+
  | --connection,--environment    -c      TEXT     Name of the connection, as    |
  |                                                defined in your config.toml   |
  |                                                file. Default: default.       |
  | --host                                TEXT     Host address for the          |
  |                                                connection. Overrides the     |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --port                                INTEGER  Port for the connection.      |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --protocol                            TEXT     Protocol to use for the       |
  |                                                connection, for example       |
  |                                                https. Overrides the value    |
  |                                                specified for the connection. |
  | --account,--accountname               TEXT     Name assigned to your         |
  |                                                Snowflake account. Overrides  |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --user,--username                     TEXT     Username to connect to        |
  |                                                Snowflake. Overrides the      |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --password                            TEXT     Snowflake password. Overrides |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --authenticator                       TEXT     Snowflake authenticator.      |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --workload-identity-provider          TEXT     Workload identity provider    |
  |                                                (AWS, AZURE, GCP, OIDC).      |
  |                                                Overrides the value specified |
  |                                                for the connection            |
  | --private-key-file,--privat…          TEXT     Snowflake private key file    |
  |                                                path. Overrides the value     |
  |                                                specified for the connection. |
  | --token                               TEXT     OAuth token to use when       |
  |                                                connecting to Snowflake.      |
  | --token-file-path                     TEXT     Path to file with an OAuth    |
  |                                                token to use when connecting  |
  |                                                to Snowflake.                 |
  | --database,--dbname                   TEXT     Database to use. Overrides    |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --schema,--schemaname                 TEXT     Database schema to use.       |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --role,--rolename                     TEXT     Role to use. Overrides the    |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --warehouse                           TEXT     Warehouse to use. Overrides   |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --temporary-connection        -x               Uses a connection defined     |
  |                                                with command-line parameters, |
  |                                                instead of one defined in     |
  |                                                config                        |
  | --mfa-passcode                        TEXT     Token to use for multi-factor |
  |                                                authentication (MFA)          |
  | --enable-diag                                  Whether to generate a         |
  |                                                connection diagnostic report. |
  | --diag-log-path                       TEXT     Path for the generated        |
  |                                                report. Defaults to system    |
  |                                                temporary directory.          |
  | --diag-allowlist-path                 TEXT     Path to a JSON file that      |
  |                                                contains allowlist            |
  |                                                parameters.                   |
  | --oauth-client-id                     TEXT     Value of client id provided   |
  |                                                by the Identity Provider for  |
  |                                                Snowflake integration.        |
  | --oauth-client-secret                 TEXT     Value of the client secret    |
  |                                                provided by the Identity      |
  |                                                Provider for Snowflake        |
  |                                                integration.                  |
  | --oauth-authorization-url             TEXT     Identity Provider endpoint    |
  |                                                supplying the authorization   |
  |                                                code to the driver.           |
  | --oauth-token-request-url             TEXT     Identity Provider endpoint    |
  |                                                supplying the access tokens   |
  |                                                to the driver.                |
  | --oauth-redirect-uri                  TEXT     URI to use for authorization  |
  |                                                code redirection.             |
  | --oauth-scope                         TEXT     Scope requested in the        |
  |                                                Identity Provider             |
  |                                                authorization request.        |
  | --oauth-disable-pkce                           Disables Proof Key for Code   |
  |                                                Exchange (PKCE). Default:     |
  |                                                False.                        |
  | --oauth-enable-refresh-toke…                   Enables a silent              |
  |                                                re-authentication when the    |
  |                                                actual access token becomes   |
  |                                                outdated. Default: False.     |
  | --oauth-enable-single-use-r…                   Whether to opt-in to          |
  |                                                single-use refresh token      |
  |                                                semantics. Default: False.    |
  | --client-store-temporary-cr…                   Store the temporary           |
  |                                                credential.                   |
  | --secondary-roles                     TEXT     Secondary roles mode applied  |
  |                                                when the session starts.      |
  |                                                Supported values are ALL and  |
  |                                                NONE; pass NONE to run the    |
  |                                                session only with the primary |
  |                                                role.                         |
  | --server-session-keep-alive                    Keep the session active       |
  |                                                indefinitely, even if there   |
  |                                                is no activity from the user. |
  +------------------------------------------------------------------------------+
  +- Global configuration -------------------------------------------------------+
  | --format                       [TABLE|JSON|JSON_EXT|  Specifies the output   |
  |                                CSV]                   format. [env var:      |
  |                                                       SNOWFLAKE_CLI_OUTPUT_… |
  |                                                       | config:              |
  |                                                       cli.output_format]     |
  |                                                       [default: TABLE]       |
  | --verbose              -v                             Displays log entries   |
  |                                                       for log levels info    |
  |                                                       and higher.            |
  | --debug                                               Displays log entries   |
  |                                                       for log levels debug   |
  |                                                       and higher; debug logs |
  |                                                       contain additional     |
  |                                                       information.           |
  | --silent                                              Turns off intermediate |
  |                                                       output to console.     |
  | --enhanced-exit-codes                                 Differentiate exit     |
  |                                                       error codes based on   |
  |                                                       failure type.          |
  |                                                       [env var:              |
  |                                                       SNOWFLAKE_ENHANCED_EX… |
  | --decimal-precision            INTEGER                Number of decimal      |
  |                                                       places to display for  |
  |                                                       decimal values. Uses   |
  |                                                       Python's default       |
  |                                                       precision if not       |
  |                                                       specified. [env var:   |
  |                                                       SNOWFLAKE_DECIMAL_PRE… |
  +------------------------------------------------------------------------------+
  '''
# ---
# name: test_disabling_and_enabling_command.5
  'Plugin multilingual-hello successfully enabled.'
# ---
# name: test_disabling_and_enabling_command.6
  '''
  
   Usage: snow [OPTIONS] COMMAND [ARGS]...
  
   Snowflake CLI tool for developers [v0.0.1-test_patched]
  
  +- Options --------------------------------------------------------------------+
  | --help                -h            Show this message and exit.              |
  | --version                           Shows version of the Snowflake CLI       |
  | --info                              Shows information about the Snowflake    |
  |                                     CLI                                      |
  | --config-file                 FILE  Specifies Snowflake CLI configuration    |
  |                                     file that should be used                 |
  | --install-completion                Install completion for the current       |
  |                                     shell.                                   |
  | --show-completion                   Show completion for the current shell,   |
  |                                     to copy it or customize the              |
  |                                     installation.                            |
  +------------------------------------------------------------------------------+
  +- Commands -------------------------------------------------------------------+
  | app                  Manages Snowflake Native Apps and Snowflake App         |
  |                      Runtime.                                                |
  | auth                 Manages authentication methods.                         |
  | bundle               Manages Snowflake Code Bundles.                         |
  | connection           Manages connections to Snowflake.                       |
  | cortex               Provides access to Snowflake Cortex.                    |
  | custom-image         Manages custom images for Snowpark Container Services.  |
  | dbt                  Manages dbt on Snowflake projects.                      |
  | dcm                  Manages DCM Projects in Snowflake.                      |
  | git                  Manages git repositories in Snowflake.                  |
  | helpers              Helper commands.                                        |
  | init                 Creates project directory from template.                |
  | logs                 Retrieves logs for a given object.                      |
  | notebook             Manages notebooks in Snowflake.                         |
  | object               Manages Snowflake objects like warehouses and stages    |
  | snowpark             Manages procedures and functions.                       |
  | spcs                 Manages Snowpark Container Services compute pools,      |
  |                      services, image registries, and image repositories.     |
  | sql                  Executes SQL statements against Snowflake interactively |
  |                      or from a query, file, or standard input.               |
  | stage                Manages stages.                                         |
  | streamlit            Manages a Streamlit app in Snowflake.                   |
  | multilingual-hello   Says hello in various languages                         |
  +------------------------------------------------------------------------------+
  
  +- Connection configuration ---------------------------------------------------+
  | --connection,--environment    -c      TEXT     Name of the connection, as    |
  |                                                defined in your config.toml   |
  |                                                file. Default: default.       |
  | --host                                TEXT     Host address for the          |
  |                                                connection. Overrides the     |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --port                                INTEGER  Port for the connection.      |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --protocol                            TEXT     Protocol to use for the       |
  |                                                connection, for example       |
  |                                                https. Overrides the value    |
  |                                                specified for the connection. |
  | --account,--accountname               TEXT     Name assigned to your         |
  |                                                Snowflake account. Overrides  |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --user,--username                     TEXT     Username to connect to        |
  |                                                Snowflake. Overrides the      |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --password                            TEXT     Snowflake password. Overrides |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --authenticator                       TEXT     Snowflake authenticator.      |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --workload-identity-provider          TEXT     Workload identity provider    |
  |                                                (AWS, AZURE, GCP, OIDC).      |
  |                                                Overrides the value specified |
  |                                                for the connection            |
  | --private-key-file,--privat…          TEXT     Snowflake private key file    |
  |                                                path. Overrides the value     |
  |                                                specified for the connection. |
  | --token                               TEXT     OAuth token to use when       |
  |                                                connecting to Snowflake.      |
  | --token-file-path                     TEXT     Path to file with an OAuth    |
  |                                                token to use when connecting  |
  |                                                to Snowflake.                 |
  | --database,--dbname                   TEXT     Database to use. Overrides    |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --schema,--schemaname                 TEXT     Database schema to use.       |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --role,--rolename                     TEXT     Role to use. Overrides the    |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --warehouse                           TEXT     Warehouse to use. Overrides   |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --temporary-connection        -x               Uses a connection defined     |
  |                                                with command-line parameters, |
  |                                                instead of one defined in     |
  |                                                config                        |
  | --mfa-passcode                        TEXT     Token to use for multi-factor |
  |                                                authentication (MFA)          |
  | --enable-diag                                  Whether to generate a         |
  |                                                connection diagnostic report. |
  | --diag-log-path                       TEXT     Path for the generated        |
  |                                                report. Defaults to system    |
  |                                                temporary directory.          |
  | --diag-allowlist-path                 TEXT     Path to a JSON file that      |
  |                                                contains allowlist            |
  |                                                parameters.                   |
  | --oauth-client-id                     TEXT     Value of client id provided   |
  |                                                by the Identity Provider for  |
  |                                                Snowflake integration.        |
  | --oauth-client-secret                 TEXT     Value of the client secret    |
  |                                                provided by the Identity      |
  |                                                Provider for Snowflake        |
  |                                                integration.                  |
  | --oauth-authorization-url             TEXT     Identity Provider endpoint    |
  |                                                supplying the authorization   |
  |                                                code to the driver.           |
  | --oauth-token-request-url             TEXT     Identity Provider endpoint    |
  |                                                supplying the access tokens   |
  |                                                to the driver.                |
  | --oauth-redirect-uri                  TEXT     URI to use for authorization  |
  |                                                code redirection.             |
  | --oauth-scope                         TEXT     Scope requested in the        |
  |                                                Identity Provider             |
  |                                                authorization request.        |
  | --oauth-disable-pkce                           Disables Proof Key for Code   |
  |                                                Exchange (PKCE). Default:     |
  |                                                False.                        |
  | --oauth-enable-refresh-toke…                   Enables a silent              |
  |                                                re-authentication when the    |
  |                                                actual access token becomes   |
  |                                                outdated. Default: False.     |
  | --oauth-enable-single-use-r…                   Whether to opt-in to          |
  |                                                single-use refresh token      |
  |                                                semantics. Default: False.    |
  | --client-store-temporary-cr…                   Store the temporary           |
  |                                                credential.                   |
  | --secondary-roles                     TEXT     Secondary roles mode applied  |
  |                                                when the session starts.      |
  |                                                Supported values are ALL and  |
  |                                                NONE; pass NONE to run the    |
  |                                                session only with the primary |
  |                                                role.                         |
  | --server-session-keep-alive                    Keep the session active       |
  |                                                indefinitely, even if there   |
  |                                                is no activity from the user. |
  +------------------------------------------------------------------------------+
  +- Global configuration -------------------------------------------------------+
  | --format                       [TABLE|JSON|JSON_EXT|  Specifies the output   |
  |                                CSV]                   format. [env var:      |
  |                                                       SNOWFLAKE_CLI_OUTPUT_… |
  |                                                       | config:              |
  |                                                       cli.output_format]     |
  |                                                       [default: TABLE]       |
  | --verbose              -v                             Displays log entries   |
  |                                                       for log levels info    |
  |                                                       and higher.            |
  | --debug                                               Displays log entries   |
  |                                                       for log levels debug   |
  |                                                       and higher; debug logs |
  |                                                       contain additional     |
  |                                                       information.           |
  | --silent                                              Turns off intermediate |
  |                                                       output to console.     |
  | --enhanced-exit-codes                                 Differentiate exit     |
  |                                                       error codes based on   |
  |                                                       failure type.          |
  |                                                       [env var:              |
  |                                                       SNOWFLAKE_ENHANCED_EX… |
  | --decimal-precision            INTEGER                Number of decimal      |
  |                                                       places to display for  |
  |                                                       decimal values. Uses   |
  |                                                       Python's default       |
  |                                                       precision if not       |
  |                                                       specified. [env var:   |
  |                                                       SNOWFLAKE_DECIMAL_PRE… |
  +------------------------------------------------------------------------------+
  '''
# ---
# name: test_disabling_and_enabling_command.7
  '''
  +------------------------------+
  | plugin name        | enabled |
  |--------------------+---------|
  | multilingual-hello | True    |
  +------------------------------+
  '''
# ---
# name: test_disabling_and_enabling_command.8
  '''
  # Copyright (c) 2024 Snowflake Inc.
  #
  # Licensed under the Apache License, Version 2.0 (the "License");
  # you may not use this file except in compliance with the License.
  # You may obtain a copy of the License at
  #
  # http://www.apache.org/licenses/LICENSE-2.0
  #
  # Unless required by applicable law or agreed to in writing, software
  # distributed under the License is distributed on an "AS IS" BASIS,
  # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  # See the License for the specific language governing permissions and
  # limitations under the License.
  
  [connections.dev]
  [connections.integration]
  schema = "public"
  authenticator = "SNOWFLAKE_JWT"
  
  
  [cli.plugins.snowpark-hello]
  enabled = true
  [cli.plugins.snowpark-hello.config]
  greeting = "Hello"
  
  [cli.plugins.multilingual-hello]
  enabled = true
  
  '''
# ---
# name: test_snow_help
  '''
  
   Usage: snow [OPTIONS] COMMAND [ARGS]...
  
   Snowflake CLI tool for developers [v0.0.1-test_patched]
  
  +- Options --------------------------------------------------------------------+
  | --help                -h            Show this message and exit.              |
  | --version                           Shows version of the Snowflake CLI       |
  | --info                              Shows information about the Snowflake    |
  |                                     CLI                                      |
  | --config-file                 FILE  Specifies Snowflake CLI configuration    |
  |                                     file that should be used                 |
  | --install-completion                Install completion for the current       |
  |                                     shell.                                   |
  | --show-completion                   Show completion for the current shell,   |
  |                                     to copy it or customize the              |
  |                                     installation.                            |
  +------------------------------------------------------------------------------+
  +- Commands -------------------------------------------------------------------+
  | app            Manages Snowflake Native Apps and Snowflake App Runtime.      |
  | auth           Manages authentication methods.                               |
  | bundle         Manages Snowflake Code Bundles.                               |
  | connection     Manages connections to Snowflake.                             |
  | cortex         Provides access to Snowflake Cortex.                          |
  | custom-image   Manages custom images for Snowpark Container Services.        |
  | dbt            Manages dbt on Snowflake projects.                            |
  | dcm            Manages DCM Projects in Snowflake.                            |
  | git            Manages git repositories in Snowflake.                        |
  | helpers        Helper commands.                                              |
  | init           Creates project directory from template.                      |
  | logs           Retrieves logs for a given object.                            |
  | notebook       Manages notebooks in Snowflake.                               |
  | object         Manages Snowflake objects like warehouses and stages          |
  | snowpark       Manages procedures and functions.                             |
  | spcs           Manages Snowpark Container Services compute pools, services,  |
  |                image registries, and image repositories.                     |
  | sql            Executes SQL statements against Snowflake interactively or    |
  |                from a query, file, or standard input.                        |
  | stage          Manages stages.                                               |
  | streamlit      Manages a Streamlit app in Snowflake.                         |
  +------------------------------------------------------------------------------+
  
  +- Connection configuration ---------------------------------------------------+
  | --connection,--environment    -c      TEXT     Name of the connection, as    |
  |                                                defined in your config.toml   |
  |                                                file. Default: default.       |
  | --host                                TEXT     Host address for the          |
  |                                                connection. Overrides the     |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --port                                INTEGER  Port for the connection.      |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --protocol                            TEXT     Protocol to use for the       |
  |                                                connection, for example       |
  |                                                https. Overrides the value    |
  |                                                specified for the connection. |
  | --account,--accountname               TEXT     Name assigned to your         |
  |                                                Snowflake account. Overrides  |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --user,--username                     TEXT     Username to connect to        |
  |                                                Snowflake. Overrides the      |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --password                            TEXT     Snowflake password. Overrides |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --authenticator                       TEXT     Snowflake authenticator.      |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --workload-identity-provider          TEXT     Workload identity provider    |
  |                                                (AWS, AZURE, GCP, OIDC).      |
  |                                                Overrides the value specified |
  |                                                for the connection            |
  | --private-key-file,--privat…          TEXT     Snowflake private key file    |
  |                                                path. Overrides the value     |
  |                                                specified for the connection. |
  | --token                               TEXT     OAuth token to use when       |
  |                                                connecting to Snowflake.      |
  | --token-file-path                     TEXT     Path to file with an OAuth    |
  |                                                token to use when connecting  |
  |                                                to Snowflake.                 |
  | --database,--dbname                   TEXT     Database to use. Overrides    |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --schema,--schemaname                 TEXT     Database schema to use.       |
  |                                                Overrides the value specified |
  |                                                for the connection.           |
  | --role,--rolename                     TEXT     Role to use. Overrides the    |
  |                                                value specified for the       |
  |                                                connection.                   |
  | --warehouse                           TEXT     Warehouse to use. Overrides   |
  |                                                the value specified for the   |
  |                                                connection.                   |
  | --temporary-connection        -x               Uses a connection defined     |
  |                                                with command-line parameters, |
  |                                                instead of one defined in     |
  |                                                config                        |
  | --mfa-passcode                        TEXT     Token to use for multi-factor |
  |                                                authentication (MFA)          |
  | --enable-diag                                  Whether to generate a         |
  |                                                connection diagnostic report. |
  | --diag-log-path                       TEXT     Path for the generated        |
  |                                                report. Defaults to system    |
  |                                                temporary directory.          |
  | --diag-allowlist-path                 TEXT     Path to a JSON file that      |
  |                                                contains allowlist            |
  |                                                parameters.                   |
  | --oauth-client-id                     TEXT     Value of client id provided   |
  |                                                by the Identity Provider for  |
  |                                                Snowflake integration.        |
  | --oauth-client-secret                 TEXT     Value of the client secret    |
  |                                                provided by the Identity      |
  |                                                Provider for Snowflake        |
  |                                                integration.                  |
  | --oauth-authorization-url             TEXT     Identity Provider endpoint    |
  |                                                supplying the authorization   |
  |                                                code to the driver.           |
  | --oauth-token-request-url             TEXT     Identity Provider endpoint    |
  |                                                supplying the access tokens   |
  |                                                to the driver.                |
  | --oauth-redirect-uri                  TEXT     URI to use for authorization  |
  |                                                code redirection.             |
  | --oauth-scope                         TEXT     Scope requested in the        |
  |                                                Identity Provider             |
  |                                                authorization request.        |
  | --oauth-disable-pkce                           Disables Proof Key for Code   |
  |                                                Exchange (PKCE). Default:     |
  |                                                False.                        |
  | --oauth-enable-refresh-toke…                   Enables a silent              |
  |                                                re-authentication when the    |
  |                                                actual access token becomes   |
  |                                                outdated. Default: False.     |
  | --oauth-enable-single-use-r…                   Whether to opt-in to          |
  |                                                single-use refresh token      |
  |                                                semantics. Default: False.    |
  | --client-store-temporary-cr…                   Store the temporary           |
  |                                                credential.                   |
  | --secondary-roles                     TEXT     Secondary roles mode applied  |
  |                                                when the session starts.      |
  |                                                Supported values are ALL and  |
  |                                                NONE; pass NONE to run the    |
  |                                                session only with the primary |
  |                                                role.                         |
  | --server-session-keep-alive                    Keep the session active       |
  |                                                indefinitely, even if there   |
  |                                                is no activity from the user. |
  +------------------------------------------------------------------------------+
  +- Global configuration -------------------------------------------------------+
  | --format                       [TABLE|JSON|JSON_EXT|  Specifies the output   |
  |                                CSV]                   format. [env var:      |
  |                                                       SNOWFLAKE_CLI_OUTPUT_… |
  |                                                       | config:              |
  |                                                       cli.output_format]     |
  |                                                       [default: TABLE]       |
  | --verbose              -v                             Displays log entries   |
  |                                                       for log levels info    |
  |                                                       and higher.            |
  | --debug                                               Displays log entries   |
  |                                                       for log levels debug   |
  |                                                       and higher; debug logs |
  |                                                       contain additional     |
  |                                                       information.           |
  | --silent                                              Turns off intermediate |
  |                                                       output to console.     |
  | --enhanced-exit-codes                                 Differentiate exit     |
  |                                                       error codes based on   |
  |                                                       failure type.          |
  |                                                       [env var:              |
  |                                                       SNOWFLAKE_ENHANCED_EX… |
  | --decimal-precision            INTEGER                Number of decimal      |
  |                                                       places to display for  |
  |                                                       decimal values. Uses   |
  |                                                       Python's default       |
  |                                                       precision if not       |
  |                                                       specified. [env var:   |
  |                                                       SNOWFLAKE_DECIMAL_PRE… |
  +------------------------------------------------------------------------------+
  '''
# ---
# name: test_snow_sql
  '''
  select round(ln(10), 2)
  +------------------+
  | ROUND(LN(10), 2) |
  |------------------|
  | 2.3              |
  +------------------+
  '''
# ---
